--- a/08_introduccion_a_contenedores.ipynb
+++ b/08_introduccion_a_contenedores.ipynb
@@ -19,7 +19,7 @@
     }
    },
    "source": [
-    "# Particionamiento, zonas y contenedores.\n",
+    "# Particionamientos, zonas y contenedores.\n",
     "Existen casos en los que en lugar de crear entornos completamente autónomos, como es el caso de las máquinas virtuales, se ha optado por crear entornos en los cuales las operaciones de bajo nivel las realiza el sistema operativo del anfitrión mientras que a los sistemas huésped se les asignan recursos aislados tanto del anfitrión como de los otros huéspedes.\n",
     "De este modo, tanto el anfitrión como los huéspedes comparten el mismo kernel y recursos básicos del sistema, pero se ejecutan en entornos separados.\n"
    ]
@@ -35,10 +35,11 @@
     "## Principales herramientas de contenedores.\n",
     "* Jail en \\*BSD.\n",
     "* Chroot en Linux.\n",
-    "* [Docker.](http://www.docker.com/)\n",
     "* [Linux Contaniers (LXC/LXD).](https://linuxcontainers.org/)\n",
     "* [OpenVZ.](https://openvz.org/)\n",
-    "* [Linux VSever.](http://linux-vserver.org/)"
+    "* [Linux VSever.](http://linux-vserver.org/)\n",
+    "* [Docker.](http://www.docker.com/)\n",
+    "* [Podman.](https://podman.io/)"
    ]
   },
   {
@@ -50,10 +51,11 @@
    },
    "source": [
     "## Clusterización de contenedores.\n",
-    "* [Docker Swarm.](https://docs.docker.com/engine/swarm/) \n",
-    "Es el orquestador de cluters de contenedortes de Docker.\n",
+    "\n",
     "* [Kubernetes.](https://kubernetes.io/)\n",
-    "Es una herramienta de gestión de contenedores y de objetos desarrollada por Google."
+    "Es una herramienta de gestión de contenedores y de objetos desarrollada por Google que es agnóstica del tipo de contenedor.\n",
+    "* [Docker Swarm.](https://docs.docker.com/engine/swarm/) \n",
+    "Es el orquestador de clusters de contenedortes de Docker."
    ]
   },
   {
@@ -66,6 +68,24 @@
    "source": [
     "## [Open Container Initiative.](https://www.opencontainers.org)\n",
     "Es un esfuerzo para regular y darle gobernanza al desarrollo de tecnologías basadas en contenedores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Usos de los contenedores.\n",
+    "\n",
+    "En la actualidad las empresa prefieren desarollar software a partir de componentes con las siguientes características:\n",
+    " * Modulares.\n",
+    " * Intercambiables.\n",
+    " * Interoperables.\n",
+    " * Sustituibles.\n",
+    " * Deben de tener un desacloplamiento (decouplig) máximo.\n",
+    " \n",
+    " Anteriormente un sistema esa monolítico. Es decir, que un cambio en un componente podía hacer inestable a todo el sista completo. \n",
+    " \n",
+    " Los contendores permiten de forma ágil y económica crear sistemass con estas caracterísiticas."
    ]
   },
   {
