--- a/09_introduccion_a_docker.ipynb
+++ b/09_introduccion_a_docker.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Antecedentes.\n",
     "\n",
-    "Docker es una herramienta que aprovechaba iniciales las ventajas de GNU/Linux  y bibliotecas tales como [```cgroups```](https://en.wikipedia.org/wiki/Cgroups) para crear y gestionar contenedores.\n",
+    "Docker es una herramienta que aprovechaba inicialmente las ventajas de GNU/Linux  y bibliotecas tales como [```cgroups```](https://en.wikipedia.org/wiki/Cgroups) para crear y gestionar contenedores.\n",
     "\n",
     "En versiones previas, Docker estaba basado en [LXC](https://linuxcontainers.org/lxc/introduction/), pero a partir de la versión  0.9, Docker utiliza su propia biblioteca llamada ```libcontainer```, la cual es independiente del kernel de GNU/Linux y puede ser ejecutada desde Windows con Hyper-V.\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "Recientemente, Docker ha aprovechado las capacidades Hyper-V de Windows para ofrecer contenedores nativos. Sin embargo, Hyper-V no está disponible en versiones básicas de Windows como la versión Home.\n",
     "\n",
-    "Para utilizar Docker em su versión completa se requiere Windows 10 Pro con Hiper-V activado."
+    "Para utilizar Docker en su versión completa se requiere Windows 10 Pro con Hiper-V activado."
    ]
   },
   {
@@ -56,7 +56,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instalación de Docker en Ubuntu.\n",
+    "## Instalación de docker en GNU/Linux."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instalación de Docker CE en Ubuntu.\n",
     "\n",
     "En el caso de Ubuntu, sólo es necesario ejecutar:\n",
     "\n",
@@ -69,31 +76,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "sudo apt update && sudo apt install docker.io -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "apt search docker.io"
+    "sudo apt update && sudo apt upgrade -y && sudo apt install docker.io -y"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instalación de *Docker CE* en CentOS.\n",
+    "### Instalación de *Docker CE* en CentOS 7.\n",
     "\n",
     "El sitio de descargas de *Docker CE* ofrece paquetes de instalación para diversas plataformas. \n",
     "\n",
-    "En el caso de CentOS es posible utilizar el repositorio de Docker para instalar la herramienta."
+    "En el caso de CentOS 7 es posible utilizar el repositorio de Docker para instalar la herramienta."
    ]
   },
   {
@@ -162,23 +160,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "sudo systemctl enable docker\n",
-    "sudo systemctl start docker\n",
-    "sudo systemctl status docker"
+    "## Inicio del servicio de Docker."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validación de docker."
+    "* Se iniciará y habilitará el servicio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "sudo systemctl enable docker\n",
+    "sudo systemctl start docker\n",
+    "sudo systemctl status docker --no-pager"
    ]
   },
   {
@@ -190,13 +195,6 @@
    "outputs": [],
    "source": [
     "docker -v"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Se iniciará y habilitará el servicio."
    ]
   },
   {
