--- a/09_introduccion_a_docker.ipynb
+++ b/09_introduccion_a_docker.ipynb
@@ -221,7 +221,7 @@
     "\n",
     "El comando ```docker``` permite acceder a funciones de ejecución y gestión de contendores desde una terminal con uin sintaxis como:\n",
     "\n",
-    "```docker <subcomando>``` "
+    "```docker <subcomando> <opciones y argumentos>``` "
    ]
   },
   {
@@ -232,7 +232,7 @@
     "\n",
     "Para acceder y ejecutar un contenedor sólo es necesario utilizar el siguiente comando con el nombre de la imagen que se desea ejecutar.\n",
     "\n",
-    "```docker run  <argumentos> <nombre> <comando>```\n",
+    "```docker run  <argumentos> <etiqueta> <comando>```\n",
     "\n",
     "* Docker buscará la imagen, la descargará y la ejecutará.\n",
     "* Tan pronto como el contenedor termine la ejecución, éste será terminado, pero no destruido.\n",
@@ -273,7 +273,7 @@
     "Para poder acceder a un contenedor mediante un emulador de terminal se utilizan los parámetros:\n",
     "\n",
     "* ```-i```, el cual permite al usuario interactuar con un contenedor en ejecución.\n",
-    "* ```-t```, el cual permite conectarse a un conetendor nediante una terminal.\n",
+    "* ```-t```, el cual permite conectarse a un conetendor mediante una terminal.\n",
     "\n",
     "La sintaxis es la siguiente:\n",
     "\n",
@@ -290,10 +290,10 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Ejecute el siguiente comando desde una terminal para acceder a un contenedor de ubuntu.\n",
+    "Ejecute el siguiente comando desde una terminal para acceder a un contenedor de *CentOS*.\n",
     "\n",
     "```\n",
-    "sudo docker run -it ubuntu /bin/bash\n",
+    "sudo docker run -it centos /bin/bash\n",
     "```\n",
     "\n",
     "Para salir del contenedor teclee ```exit```."
@@ -412,7 +412,7 @@
    },
    "outputs": [],
    "source": [
-    "sudo docker run -idt --name Prueba ubuntu /bin/bash"
+    "sudo docker run -idt --name Prueba centos /bin/bash"
    ]
   },
   {
