--- a/10_dockerfile.ipynb
+++ b/10_dockerfile.ipynb
@@ -203,7 +203,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "chmod +x start.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls"
    ]
   },
   {
@@ -248,7 +266,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo systemctl stop httpd"
+    "sudo systemctl stop apache2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo docker ps -a"
    ]
   },
   {
@@ -259,7 +286,7 @@
    },
    "outputs": [],
    "source": [
-    "sudo docker run -d -v webroot:/var/www/html -p 80:80 --name servidor nginx_image"
+    "sudo docker run -d -v webroot:/var/www/html -p 80:80 --name servidor2 nginx_image"
    ]
   },
   {
@@ -285,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker stop servidor"
+    "sudo docker stop servidor2"
    ]
   },
   {
@@ -303,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker rm servidor"
+    "sudo docker rm servidor2"
    ]
   },
   {
