--- a/11_docker_container.ipynb
+++ b/11_docker_container.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "A continuación se crearán varios contenedores.\n",
     "\n",
-    "**Advertencia:** Asegúrese de haber creado la imagen *nginx_image* creado al ejecutar la notebook [03_dockerfile.ipynb](03_dockerfile.ipynb)."
+    "**Advertencia:** Asegúrese de haber creado la imagen *nginx_image* creado al ejecutar la notebook [10_dockerfile.ipynb](10_dockerfile.ipynb)."
    ]
   },
   {
@@ -79,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo systemctl stop httpd\n",
-    "sudo systemctl status httpd"
+    "sudo systemctl stop apache2\n",
+    "sudo systemctl status apache2  --no-pager"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Al utilizar la opción filter es posible aplicar un filtro en la búsqueda.\n",
+    "* Al utilizar la opción ```--filter``` es posible aplicar un filtro en la búsqueda.\n",
     "\n",
     "Los filtros disponibles pueden ser consultados en https://docs.docker.com/engine/reference/commandline/ps/#filtering"
    ]
@@ -405,7 +405,7 @@
     "\n",
     "Referencia: https://docs.docker.com/engine/reference/commandline/container_diff/\n",
     "\n",
-    "**Ejemplo: **"
+    "**Ejemplo:**"
    ]
   },
   {
@@ -891,7 +891,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2018.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
    ]
   }
  ],
