--- a/12_gestion_de_imagenes.ipynb
+++ b/12_gestion_de_imagenes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![cloudevel](Imagenes/cloudevel.png)](https://cloudevel.com)"
+    "<a href=\"https://pythonista.io\"> <img src=\"img/pythonista.png\" width=\"100px\"></a>"
    ]
   },
   {
@@ -155,10 +155,10 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* La siguiente celda permitirá acceder a un usuario que ya ha sido registrado en *Docker Hub* utilizando un nombre y una constraeña válida, la cual debe de ser escrita dentro del archivo [src/contrasena.txt](src/contrasena.txt).\n",
+    "* La siguiente celda permitirá acceder a un usuario que ya ha sido registrado en *Docker Hub* utilizando un nombre y una constraeña válida, la cual debe de ser escrita dentro del archivo ```contrasena.txt```.\n",
     "\n",
-    "    * El argumento ```cloudevel``` del parámetro ```-u``` debe de ser sustituido por un nombre de usuario válido.\n",
-    "    * El parámetro ```--password-stdin``` permite capturar la contraseña desde la entrada estándar de una terminal. En este caso, este parámetro usará como contraseña el contenido que el comando ```cat``` extarerá del archivo ```src/contrasena.txt```. \n",
+    "    * El argumento ```pythonista``` del parámetro ```-u``` debe de ser sustituido por un nombre de usuario válido.\n",
+    "    * El parámetro ```--password-stdin``` permite capturar la contraseña desde la entrada estándar de una terminal. En este caso, este parámetro usará como contraseña el contenido que el comando ```cat``` extarerá del archivo ```contrasena.txt```. \n",
     "    \n",
     "**ADVERTENCIA:**\n",
     "\n",
@@ -167,11 +167,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading package lists... Done\n",
+      "Building dependency tree       \n",
+      "Reading state information... Done\n",
+      "ca-certificates is already the newest version (20180409).\n",
+      "curl is already the newest version (7.58.0-2ubuntu3.8).\n",
+      "dbus-x11 is already the newest version (1.12.2-1ubuntu1.1).\n",
+      "software-properties-common is already the newest version (0.96.24.32.11).\n",
+      "apt-transport-https is already the newest version (1.6.12).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 5 not upgraded.\n"
+     ]
+    }
+   ],
    "source": [
-    "cat src/contrasena.txt | sudo docker login -u cloudevel --password-stdin"
+    "sudo apt install -y dbus-x11 apt-transport-https ca-certificates curl software-properties-common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error saving credentials: error storing credentials - err: exit status 1, out: `Cannot autolaunch D-Bus without X11 $DISPLAY`\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "cat contrasena.txt | sudo docker login -u pythonistaio --password-stdin"
    ]
   },
   {
@@ -207,18 +248,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE\n",
+      "nginx               123                 9257780397e4        3 days ago          253MB\n",
+      "nginx_image         latest              b5ac233d1da5        3 days ago          253MB\n",
+      "<none>              <none>              48b0dc20c2a2        3 days ago          253MB\n",
+      "ubuntu              16.04               56bab49eef2e        13 days ago         123MB\n",
+      "ubuntu              latest              775349758637        5 weeks ago         64.2MB\n",
+      "centos              latest              0f3e07c0138f        2 months ago        220MB\n",
+      "hello-world         latest              fce289e99eb9        11 months ago       1.84kB\n",
+      "jenkins             latest              cd14cecfdb3a        17 months ago       696MB\n"
+     ]
+    }
+   ],
    "source": [
     "sudo docker image ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE\n",
+      "nginx               123                 9257780397e4        3 days ago          253MB\n",
+      "nginx_image         latest              b5ac233d1da5        3 days ago          253MB\n",
+      "<none>              <none>              48b0dc20c2a2        3 days ago          253MB\n",
+      "ubuntu              16.04               56bab49eef2e        13 days ago         123MB\n",
+      "ubuntu              latest              775349758637        5 weeks ago         64.2MB\n",
+      "centos              latest              0f3e07c0138f        2 months ago        220MB\n",
+      "hello-world         latest              fce289e99eb9        11 months ago       1.84kB\n",
+      "jenkins             latest              cd14cecfdb3a        17 months ago       696MB\n"
+     ]
+    }
+   ],
    "source": [
     "sudo docker images"
    ]
@@ -237,7 +310,7 @@
     "\n",
     "Referencia: https://docs.docker.com/engine/reference/commandline/image_build/\n",
     "\n",
-    "En el capítulo [03_dockerfile.ipynb](03_dockerfile.ipynb) se exploró la forma de crear imágenes a partir de un *Dockerfile*."
+    "En el capítulo [09_dockerfile.ipynb](09_dockerfile.ipynb) se exploró la forma de crear imágenes a partir de un *Dockerfile*."
    ]
   },
   {
@@ -444,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se detendrá y eliminará al contenedor ```ùbuntu-ejemplo```.\n",
+    "* Se detendrá y eliminará al contenedor ````ubuntu-ejemplo```.\n",
     "* Se eliminará la imagen ```ubuntu:16.04```."
    ]
   },
@@ -661,16 +734,32 @@
    "source": [
     "### El comando ```docker image push```.\n",
     "\n",
-    "Este comando se utiliza para subir una imagen a un regsistry.\n",
+    "Este comando se utiliza para subir una imagen a un registry.\n",
     "\n",
     "Referencia: https://docs.docker.com/engine/reference/commandline/image_push/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error response from daemon: No such image: cloudevel/nginx:latest\n",
+      "The push refers to repository [docker.io/cloudevel/cd331]\n",
+      "An image does not exist locally with the tag: cloudevel/cd331\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "sudo docker tag cloudevel/nginx:latest cloudevel/cd331:1904\n",
     "sudo docker push cloudevel/cd331:1904"
