--- a/10_dockerfile.ipynb
+++ b/10_dockerfile.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![cloudevel](Imagenes/cloudevel.png)](https://cloudevel.com)"
+    "<a href=\"https://pythonista.io\"> <img src=\"img/pythonista.png\" width=\"100px\"></a>"
    ]
   },
   {
