--- a/12_gestion_de_imagenes.ipynb
+++ b/12_gestion_de_imagenes.ipynb
@@ -66,13 +66,13 @@
     "Las imágenes de docker pueden ser identificadas en un *registry* usando la siguiente estructura:\n",
     "\n",
     "```\n",
-    "<nombre del repositorio>/<nombre>:<tag>\n",
+    "<nombre del repositorio>/<nombre de la imagen>:<tag>\n",
     "```\n",
     "\n",
     "En el caso de acceder a *Docker Hub* sólo es necesario indicar el tag. En caso contrario es necesario indicar la URL del servidor del *registry*.\n",
     "\n",
     "```\n",
-    "<URL>/<nombre del repositorio>/<nombre>:<tag>\n",
+    "<URL>/<nombre del repositorio>/<nombre de la imagen>:<tag>\n",
     "```"
    ]
   },
@@ -167,50 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading package lists... Done\n",
-      "Building dependency tree       \n",
-      "Reading state information... Done\n",
-      "ca-certificates is already the newest version (20180409).\n",
-      "curl is already the newest version (7.58.0-2ubuntu3.8).\n",
-      "dbus-x11 is already the newest version (1.12.2-1ubuntu1.1).\n",
-      "software-properties-common is already the newest version (0.96.24.32.11).\n",
-      "apt-transport-https is already the newest version (1.6.12).\n",
-      "0 upgraded, 0 newly installed, 0 to remove and 5 not upgraded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudo apt install -y dbus-x11 apt-transport-https ca-certificates curl software-properties-common"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error saving credentials: error storing credentials - err: exit status 1, out: `Cannot autolaunch D-Bus without X11 $DISPLAY`\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "cat contrasena.txt | sudo docker login -u pythonistaio --password-stdin"
    ]
@@ -248,50 +218,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE\n",
-      "nginx               123                 9257780397e4        3 days ago          253MB\n",
-      "nginx_image         latest              b5ac233d1da5        3 days ago          253MB\n",
-      "<none>              <none>              48b0dc20c2a2        3 days ago          253MB\n",
-      "ubuntu              16.04               56bab49eef2e        13 days ago         123MB\n",
-      "ubuntu              latest              775349758637        5 weeks ago         64.2MB\n",
-      "centos              latest              0f3e07c0138f        2 months ago        220MB\n",
-      "hello-world         latest              fce289e99eb9        11 months ago       1.84kB\n",
-      "jenkins             latest              cd14cecfdb3a        17 months ago       696MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudo docker image ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE\n",
-      "nginx               123                 9257780397e4        3 days ago          253MB\n",
-      "nginx_image         latest              b5ac233d1da5        3 days ago          253MB\n",
-      "<none>              <none>              48b0dc20c2a2        3 days ago          253MB\n",
-      "ubuntu              16.04               56bab49eef2e        13 days ago         123MB\n",
-      "ubuntu              latest              775349758637        5 weeks ago         64.2MB\n",
-      "centos              latest              0f3e07c0138f        2 months ago        220MB\n",
-      "hello-world         latest              fce289e99eb9        11 months ago       1.84kB\n",
-      "jenkins             latest              cd14cecfdb3a        17 months ago       696MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudo docker images"
    ]
@@ -310,7 +248,7 @@
     "\n",
     "Referencia: https://docs.docker.com/engine/reference/commandline/image_build/\n",
     "\n",
-    "En el capítulo [09_dockerfile.ipynb](09_dockerfile.ipynb) se exploró la forma de crear imágenes a partir de un *Dockerfile*."
+    "En el capítulo [10_dockerfile.ipynb](10_dockerfile.ipynb) se exploró la forma de crear imágenes a partir de un *Dockerfile*."
    ]
   },
   {
@@ -412,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "sudo docker image inspect centos:6.10"
@@ -517,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se detendrá y eliminará al contenedor ````ubuntu-ejemplo```.\n",
+    "* Se detendrá y eliminará al contenedor ```ubuntu-ejemplo```.\n",
     "* Se eliminará la imagen ```ubuntu:16.04```."
    ]
   },
@@ -614,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker images -a"
+    "sudo docker images"
    ]
   },
   {
@@ -647,6 +587,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sudo docker ps -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sudo docker image import nginx.tar servidor:latest"
    ]
   },
@@ -656,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker images -a"
+    "sudo docker images"
    ]
   },
   {
@@ -665,7 +614,7 @@
    "source": [
     "### El comando ```docker image load```.\n",
     "\n",
-    "Este comando es idéntico a ```docker load``` y es similar a ```docker image import```, pero se peude escoger entre un archivo tar o STDIN.\n",
+    "Este comando es idéntico a ```docker load``` y es similar a ```docker image import```, pero se puede escoger entre un archivo tar o STDIN.\n",
     "\n",
     "Referencia: https://docs.docker.com/engine/reference/commandline/image_load/"
    ]
@@ -687,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker image save servidor:latest -o "
+    "sudo docker image save servidor:latest -o servidor.tar"
    ]
   },
   {
@@ -741,28 +690,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error response from daemon: No such image: cloudevel/nginx:latest\n",
-      "The push refers to repository [docker.io/cloudevel/cd331]\n",
-      "An image does not exist locally with the tag: cloudevel/cd331\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sudo docker tag cloudevel/nginx:latest cloudevel/cd331:1904\n",
-    "sudo docker push cloudevel/cd331:1904"
+    "sudo docker tag cloudevel/nginx:latest cloudevel/cd331:1912\n",
+    "sudo docker push cloudevel/cd331:1912"
    ]
   },
   {
