--- a/13_docker_compose.ipynb
+++ b/13_docker_compose.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Descarga e instalación de Docker Compose en CentOS."
+    "#### Descarga e instalación de Docker Compose en CentOS 7."
    ]
   },
   {
@@ -130,6 +130,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip search docker-compose"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,25 +156,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\"clave\":\"Valor\", \"clave_2\":true, \"arreglo\":[1,2,3,]}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### El archivo ```src/13/docker-compose.yaml```\n",
+    "\n",
     "``` yaml\n",
     "version: '3'\n",
     "services:\n",
@@ -191,7 +186,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp src/docker-compose.yaml ."
+    "cat src/13/docker-compose.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cp src/13/docker-compose.yaml ."
    ]
   },
   {
@@ -202,13 +206,6 @@
     "\n",
     "https://docs.docker.com/compose/reference/overview/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
