--- a/13_docker_compose.ipynb
+++ b/13_docker_compose.ipynb
@@ -113,11 +113,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "sudo apt install docker-compose -y"
+    "sudo apt update && sudo apt upgrade -y && install docker-compose -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo apt remove golang-docker-credential-helpers -y"
    ]
   },
   {
@@ -127,15 +136,6 @@
    "outputs": [],
    "source": [
     "docker-compose -v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip search docker-compose"
    ]
   },
   {
