--- a/12_gestion_de_imagenes.ipynb
+++ b/12_gestion_de_imagenes.ipynb
@@ -168,17 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "sudo apt install -y dbus-x11 apt-transport-https ca-certificates curl software-properties-common"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,8 +683,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker tag cloudevel/nginx:latest cloudevel/cd331:1912\n",
-    "sudo docker push cloudevel/cd331:1912"
+    "sudo docker tag cloudevel/nginx:latest pythonistaio/cd331:1912\n",
+    "sudo docker push pythonistaio/cd331:1912"
    ]
   },
   {
