--- a/13_docker_compose.ipynb
+++ b/13_docker_compose.ipynb
@@ -117,16 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "sudo apt update && sudo apt upgrade -y && install docker-compose -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sudo apt remove golang-docker-credential-helpers -y"
+    "sudo apt update && sudo apt upgrade -y && sudo apt install docker-compose -y"
    ]
   },
   {
