--- a/12_gestion_de_imagenes.ipynb
+++ b/12_gestion_de_imagenes.ipynb
@@ -683,8 +683,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sudo docker tag cloudevel/nginx:latest pythonistaio/cd331:1912\n",
+    "sudo docker pull cloudevel/cd331:latest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo docker tag cloudevel/cd331:latest pythonistaio/cd331:latest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "sudo docker push pythonistaio/cd331:1912"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo docker save pythonistaio/cd331:1912 -o docker.tar"
    ]
   },
   {
