--- a/13_docker_compose.ipynb
+++ b/13_docker_compose.ipynb
@@ -69,37 +69,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "wget https://github.com/docker/compose/releases/download/1.24.0/docker-compose-Linux-x86_64"
+    "sudo curl -L https://github.com/docker/compose/releases/download/1.25.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose\n",
+    "sudo chmod +x /usr/local/bin/docker-compose"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sudo cp docker-compose-Linux-x86_64 /usr/bin/docker-compose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sudo chmod +x /usr/bin/docker-compose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "docker-compose version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo rm /usr/local/bin/docker-compose"
    ]
   },
   {
@@ -126,7 +122,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docker-compose -v"
+    "sudo docker-compose -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sudo apt remove golang-docker-credential-helpers -y"
    ]
   },
   {
